# dataset-complexity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
output/csg/: defect_prediction.txt  issue_close_time_prediction.txt
results/: auc_scores.csv  clf_perf.txt  correlations.txt  ground_truth.csv  logs.jsonl
src/: auc.py  clf_perf.py  defect_prediction.py  issue_lifetime_prediction.py  main.py  parse_clf_perf.py  pyproject.toml
src/csg/: README.md  defect_prediction.py  issue_lifetime_prediction.py
src/data/: __init__.py  bugzilla_issue.py  defect.py  github_issue.py  static_code.py  uci.py
src/metrics/: __init__.py  base.py  csg.py  dcol.py  smoothness.py  strong_convexity.py  types.py
