[project]
name = "dataset-complexity"
requires-python = "==3.12"
dependencies = [
    "raise-utils==2.5.1",
    "spectral-metric~=0.6.1",
    "arff~=0.9",
    "pandas~=2.2.2",
    "lxml~=5.2.1",
    "loguru~=0.7.2",
    "json-repair~=0.28.0",
    "lazypredict~=0.2.12",
    "torch==2.4.1",
]

[tool.poetry]
name = "dataset-complexity"
version = "0.1.0"
description = "TBD"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "metrics", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
raise-utils = "^2.5.1"
spectral-metric = "^0.6.1"
arff = "^0.9"
pandas = "^2.2.2"
lxml = "^5.2.1"
loguru = "^0.7.2"
json-repair = "^0.28.0"
lazypredict = "^0.2.12"
torch = "2.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".DS_Store",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "spectral-metric"
]

line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I001", "RUF002", "RUF100", "RUF013", "RUF010", "RUF200"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120
